# Autonomous-AI-System-for-Revenue-Operations-AARO-

./: .env.example  .gitignore  Dockerfile  Dockerfile.ui  README.md  business_demo.md  client_demo.html  debug_import.py  deploy-demo.md  deploy-full-demo.bat  docker-compose.yml  pyproject.toml  requirements.txt  revenue_intelligence_test_report.md  start_aaro_full.bat  start_aboa.bat  startupAABOA.md
aboa/: __init__.py  main.py  orchestration.py
aboa/action/: __init__.py  api.py  engine.py  integration_hub.py
aboa/core/: __init__.py  auth.py  config.py  exceptions.py  health.py  logging.py  middleware.py  monitoring.py  tenant.py  tenant_api.py
aboa/data_ingestion/: __init__.py  api.py  connectors.py  connectors_backup.py  service.py
aboa/decision/: __init__.py  api.py  pipeline_risk_detector.py  pipeline_velocity_optimizer.py  revenue_decision_engine.py  revenue_optimization_api.py  sales_process_efficiency_optimizer.py
aboa/human_loop/: __init__.py  api.py  approval_handlers.py  (+3 more)
config/: development.env  production.env  staging.env  testing.env
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  secret.yaml
nginx/: demo.conf
scripts/: deploy.sh  docker-healthcheck.py  init-db.sql  migrate.py  setup-env.py  setup.bat  setup.sh  validate-env.py
tests/: __init__.py  test_action_api.py  test_approval_handlers.py  test_config.py  test_connectors.py  test_exceptions.py  test_human_loop_api.py  test_knowledge_api.py  test_main.py  test_main_app.py  test_models.py  test_multi_tenant.py  test_observability.py  test_observability_api.py  test_orchestration_integration.py  test_pipeline_risk_detector.py  test_pipeline_velocity_optimizer.py  test_revenue_decision_engine.py  test_revenue_intelligence_api.py  test_sales_action_engine.py  test_sales_manager_interface.py  test_sales_process_efficiency_optimizer.py  test_vector_store.py
ui/: README.md  app.js  index.html  server.py  styles.css
(+20 files in other folders)
